[package]
name = "input"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["input"]
description = "input handler for glutin"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-input.git"
homepage = "https://github.com/nathanfaucett/rs-input"

exclude = ["example"]

[dependencies]
glutin = "*"

vec2 = {git = "https://github.com/nathanfaucett/rs-vec2.git"}
