[package]
name = "input"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["input"]
description = "input handler for glutin"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-input.git"
homepage = "https://github.com/nathanfaucett/rs-input"

exclude = ["example"]

[dependencies]
glutin = "*"

vector = {git = "https://github.com/nathanfaucett/rs-vector.git"}
stack = {git = "https://github.com/nathanfaucett/rs-stack.git"}

hash_map = {git = "https://github.com/nathanfaucett/rs-hash_map.git"}
map = {git = "https://github.com/nathanfaucett/rs-map.git"}
insert = {git = "https://github.com/nathanfaucett/rs-insert.git"}

vec2 = {git = "https://github.com/nathanfaucett/rs-vec2.git"}

shared = {git = "https://github.com/nathanfaucett/rs-shared.git"}
